--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
     <title>MDSite</title>
 
+    <!--
     <link rel="stylesheet" href="node_modules/milligram/dist/milligram.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="./mdsite.css" type="text/css" media="screen">
+    
+-->
+    <link rel="stylesheet" href="build/mdsite.css" type="text/css" media="screen">
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="This is a description">
@@ -48,6 +52,7 @@
         </div>
     </div>
 
+    <!--
     <script src="node_modules/zepto/dist/zepto.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="node_modules/handlebars/dist/handlebars.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="node_modules/marked/marked.min.js" type="text/javascript" charset="utf-8"></script>
@@ -55,6 +60,8 @@
     <script src="node_modules/yaml-front-matter/dist/js-yaml-front-client.min.js" type="text/javascript" charset="utf-8"></script>
 
     <script src="./index.js" type="text/javascript"></script>
+-->
+    <script src="./build/mdsite.js"></script>
 </body>
 
 </html>
