updated index for gulp

--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
 
     <script src="./index.js" type="text/javascript"></script>
 -->
-    <script src="./build/mdsite.js"></script>
+    <script src="build/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="build/handlebars.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="build/marked.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="build/async.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="build/js-yaml-front-client.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="build/index.js"></script>
 </body>
 
 </html>
