--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./mdsite.css" type="text/css" media="screen">
     
 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="build/mdsite.css" type="text/css" media="screen">
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -61,12 +62,7 @@
 
     <script src="./index.js" type="text/javascript"></script>
 -->
-    <script src="build/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="build/handlebars.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="build/marked.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="build/async.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="build/js-yaml-front-client.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="build/index.js"></script>
+    <script src="build/mdsite.js"></script>
 </body>
 
 </html>
